[ADD] - 관리자 페이지 Dashboard 화면 구현

--- a/src/main/resources/static/css/scss/pages/admin/_itemMng.scss
+++ b/src/main/resources/static/css/scss/pages/admin/_itemMng.scss
@@ -25,6 +25,7 @@
                 th {
                     padding: 15px 0 14px;
                     border-bottom: 1px solid #e5e5e5;
+                    border-top: 1px solid #e5e5e5;
                     color: #353535;
                     vertical-align: middle;
                     font-weight: normal;
