--- a/src/main/resources/static/css/css/admin.css
+++ b/src/main/resources/static/css/css/admin.css
@@ -432,6 +432,7 @@ footer .footer_copyright {
 .item_mng_body form table thead th {
   padding: 15px 0 14px;
   border-bottom: 1px solid #e5e5e5;
+  border-top: 1px solid #e5e5e5;
   color: #353535;
   vertical-align: middle;
   font-weight: normal;
@@ -526,6 +527,7 @@ footer .footer_copyright {
 }
 .order_mng_body form table thead th {
   padding: 15px 0 14px;
+  border-top: 1px solid #e5e5e5;
   border-bottom: 1px solid #e5e5e5;
   color: #353535;
   vertical-align: middle;
@@ -554,6 +556,21 @@ footer .footer_copyright {
 .order_mng_body form table tbody tr td button {
   font-size: 12px !important;
   padding: 0 !important;
+}
+.order_mng_body form table tbody tr td.thumb img {
+  width: 80px;
+  height: 110px;
+}
+.order_mng_body form table tbody tr td.product .name a {
+  color: #353535 !important;
+}
+.order_mng_body form table tbody tr td.product .option {
+  color: #757575;
+  margin-top: 9px;
+}
+.order_mng_body form table tbody tr td.left_top {
+  text-align: left;
+  vertical-align: top;
 }
 .order_mng_body form table tbody tr td.left {
   text-align: left;
@@ -602,6 +619,87 @@ footer .footer_copyright {
 }
 .order_mng_body .search_box input:focus::placeholder {
   opacity: 0;
+}
+
+.admin_main_header {
+  margin: 0px auto 60px;
+  position: relative;
+}
+.admin_main_header h2 {
+  font-size: 15px;
+  text-align: center;
+}
+.admin_main_header .divider {
+  width: 70px;
+  height: 1px;
+  background: #aaa;
+  margin: 20px auto;
+}
+
+.admin_main_body .card-header {
+  position: relative;
+}
+.admin_main_body .card-header span {
+  margin-left: 5px;
+}
+.admin_main_body .card-header .fa-bars {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 18px;
+  cursor: pointer;
+}
+.admin_main_body .card-body table {
+  font-size: 12px;
+}
+.admin_main_body .card-body table thead th {
+  padding: 15px 0 14px;
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+  color: #353535;
+  vertical-align: middle;
+  font-weight: normal;
+  background: #fff;
+  text-align: center;
+}
+.admin_main_body .card-body table tbody {
+  vertical-align: middle;
+  text-align: center;
+}
+.admin_main_body .card-body table tbody tr td {
+  padding: 15px 5px 14px;
+  border-top: 1px solid #e5e5e5;
+  color: #353535;
+}
+.admin_main_body .card-body table tbody tr td a {
+  width: 90px;
+  margin: 1px 0;
+}
+.admin_main_body .card-body table tbody tr td a:hover {
+  text-decoration: underline;
+  color: rgb(107, 107, 107);
+}
+.admin_main_body .card-body table tbody tr td.thumb img {
+  width: 80px;
+  height: 110px;
+}
+.admin_main_body .card-body table tbody tr td.product .name a {
+  color: #353535 !important;
+}
+.admin_main_body .card-body table tbody tr td.product .option {
+  color: #757575;
+  margin-top: 9px;
+}
+.admin_main_body .card-body table tbody tr td.left_top {
+  text-align: left;
+  vertical-align: top;
+}
+.admin_main_body .card-body table tbody tr td button {
+  font-size: 12px !important;
+  padding: 0 !important;
+}
+.admin_main_body .card-body table tbody tr td.left {
+  text-align: left;
 }
 
 main {
