--- a/src/main/resources/static/css/scss/admin.scss
+++ b/src/main/resources/static/css/scss/admin.scss
@@ -14,6 +14,7 @@
 @import 'pages/admin/itemForm';
 @import 'pages/admin/itemMng';
 @import 'pages/admin/orderMng';
+@import 'pages/admin/adminMain';
 
 main {
     display: flex;
