--- a/src/main/resources/static/css/scss/pages/admin/_adminMain.scss
+++ b/src/main/resources/static/css/scss/pages/admin/_adminMain.scss
@@ -1,5 +1,6 @@
-.order_mng_header {
+.admin_main_header {
     margin: 0px auto 60px;
+    position: relative;
 
     h2 {
         font-size: 15px;
@@ -14,10 +15,25 @@
     }
 }
 
-.order_mng_body {
-    margin: 0 auto;
+.admin_main_body {
 
-    form {
+    .card-header {
+        position: relative;
+
+        span {
+            margin-left: 5px;
+        }
+
+        .fa-bars {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+    }
+
+    .card-body {
         table {
             font-size: 12px;
 
@@ -43,7 +59,6 @@
                         padding: 15px 5px 14px;
                         border-top: 1px solid #e5e5e5;
                         color: #353535;
-                        height: 80px;
 
                         a {
                             width: 90px;
@@ -53,11 +68,6 @@
                         a:hover {
                             text-decoration: underline;
                             color: rgb(107, 107, 107);
-                        }
-
-                        button {
-                            font-size: 12px !important;
-                            padding: 0 !important;
                         }
 
                         &.thumb {
@@ -82,6 +92,11 @@
                             text-align: left;
                             vertical-align: top;
                         }
+
+                        button {
+                            font-size: 12px !important;
+                            padding: 0 !important;
+                        }
                     }
 
                     td.left {
@@ -92,35 +107,4 @@
         }
     }
 
-    .search_box {
-        margin-top: 40px;
-        display: flex;
-        justify-content: end;
-        align-items: center;
-
-        select {
-            border: 1px solid #d3d3d3;
-            font-size: 12px;
-            margin-right: 2px;
-            height: 40px;
-        }
-
-        input {
-            width: 240px;
-            border: none;
-            height: 40px;
-            border: 1px solid #d3d3d3;
-            padding-left: 10px;
-            font-size: 12px;
-            margin-right: 2px;
-        }
-
-        input:focus {
-            outline: none;
-        }
-
-        input:focus::placeholder {
-            opacity: 0;
-        }
-    }
 }
