--- a/src/main/resources/templates/admin/item/itemForm.html
+++ b/src/main/resources/templates/admin/item/itemForm.html
@@ -113,20 +113,24 @@
                                             </th>
                                             <td>
                                                 <input class="fake_input" type="text">
-                                                <label class="white_btn_w90_h40 find_file" th:for="${'img' + num}">파일 찾기</label>
-                                                <input type="file" class="real_input" name="itemImgFile" th:id="${'img' + num}">
+                                                <label class="white_btn_w90_h40 find_file" th:for="${'img' + num}">파일
+                                                    찾기</label>
+                                                <input type="file" class="real_input" name="itemImgFile"
+                                                    th:id="${'img' + num}">
                                             </td>
                                         </tr>
                                     </div>
                                     <div th:if="${not #lists.isEmpty(itemFormDto.itemImgDtoList)}">
                                         <tr th:each="itemImgDto, status: ${itemFormDto.itemImgDtoList}">
                                             <th scope="row">
-                                                <label th:for="${'img' + status.index+1}" th:text="'상품 이미지 ' + ${status.index+1}"></label>
+                                                <label th:for="${'img' + status.index+1}"
+                                                    th:text="'상품 이미지 ' + ${status.index+1}"></label>
                                             </th>
                                             <td>
                                                 <input class="fake_input" type="text"
                                                     th:value="${not #strings.isEmpty(itemImgDto.oriImgName)} ? ${itemImgDto.oriImgName} : '상품 이미지 ' + ${status.index+1}">
-                                                <label class="white_btn_w90_h40 find_file" th:for="${'img' + status.index+1}">파일
+                                                <label class="white_btn_w90_h40 find_file"
+                                                    th:for="${'img' + status.index+1}">파일
                                                     찾기</label>
                                                 <input type="file" class="real_input" name="itemImgFile"
                                                     th:id="${'img' + status.index+1}">
@@ -137,8 +141,8 @@
                                 </tbody>
                             </table>
                             <div class="btn_box">
-                                <button th:if="${#strings.isEmpty(itemFormDto.id)}" class="black_btn_w130_h40 enroll_btn"
-                                    type="submit">저장</button>
+                                <button th:if="${#strings.isEmpty(itemFormDto.id)}"
+                                    class="black_btn_w130_h40 enroll_btn" type="submit">저장</button>
                                 <button th:unless="${#strings.isEmpty(itemFormDto.id)}" class="black_btn_w130_h40"
                                     type="submit">수정</button>
                                 <a class="white_btn_w130_h40" th:href="@{/admin/items}">취소</a>
@@ -152,6 +156,7 @@
         </article>
     </main>
 
+    <div th:replace="/layouts/adminLayout.html :: js"></div>
     <!-- editor -->
     <script src="https://cdn.ckeditor.com/ckeditor5/40.2.0/classic/ckeditor.js"></script>
     <!-- custom js -->
@@ -188,7 +193,7 @@
             $.ajax({
                 url: "/admin/item/categories",
                 type: "GET",
-                success: function(res) {
+                success: function (res) {
                     let jsonData = JSON.parse(res);
 
                     let cate1Arr = [];
