--- a/src/main/resources/static/css/css/admin.css
+++ b/src/main/resources/static/css/css/admin.css
@@ -744,11 +744,42 @@ main .sidebar .sidebar_logo .profile_img img {
   height: 50px;
   border-radius: 50%;
 }
-main .sidebar .sidebar_logo .profile_name button {
+main .sidebar .sidebar_logo .profile_name .logout_box_toggle {
   color: white;
+  position: relative;
+  background: transparent;
+  outline: none;
+  border: none;
 }
-main .sidebar .sidebar_logo .profile_name button:hover {
+main .sidebar .sidebar_logo .profile_name .logout_box_toggle .fa-sort-down {
+  vertical-align: top;
+}
+main .sidebar .sidebar_logo .profile_name .logout_box_toggle:hover {
   color: #bdbdbd;
+}
+main .sidebar .sidebar_logo .profile_name .logout_box {
+  position: absolute;
+  top: 100px;
+  background: white;
+  border-radius: 5px;
+  width: 140px;
+  height: 50px;
+  display: none;
+}
+main .sidebar .sidebar_logo .profile_name .logout_box button {
+  outline: none;
+  background-color: transparent;
+  width: 100%;
+  margin-top: 10px;
+  text-align: left;
+  border: none;
+  padding-left: 5px;
+}
+main .sidebar .sidebar_logo .profile_name .logout_box button span {
+  font-size: 17px;
+}
+main .sidebar .sidebar_logo .profile_name .logout_box button:hover {
+  background-color: #f1f1f1;
 }
 main .sidebar .sidebar_menu .sidebar-header {
   color: #e0ecef;
