--- a/src/main/resources/static/css/scss/admin.scss
+++ b/src/main/resources/static/css/scss/admin.scss
@@ -49,11 +49,47 @@ main {
             }
 
             .profile_name {
-                button {
+                .logout_box_toggle {
                     color: white;
+                    position: relative;
+                    background: transparent;
+                    outline: none;
+                    border: none;
+
+                    .fa-sort-down {
+                        vertical-align: top;
+                    }
 
                     &:hover {
                         color: #bdbdbd;
+                    }
+                }
+
+                .logout_box {
+                    position: absolute;
+                    top: 100px;
+                    background: white;
+                    border-radius: 5px;
+                    width: 140px;
+                    height: 50px;
+                    display: none;
+
+                    button {
+                        outline: none;
+                        background-color: transparent;
+                        width: 100%;
+                        margin-top: 10px;
+                        text-align: left;
+                        border: none;
+                        padding-left: 5px;
+
+                        span {
+                            font-size: 17px;
+                        }
+
+                        &:hover {
+                            background-color: #f1f1f1;
+                        }
                     }
                 }
             }
